--- a/css/style.css
+++ b/css/style.css
@@ -433,6 +433,11 @@ body {
   display: flex;
   gap: 20px; }
 
+.footer-contact-about__social-icon {
+  transition: opacity 0.3s ease 0s; }
+  .footer-contact-about__social-icon:hover, .footer-contact-about__social-icon:focus {
+    opacity: 0.6; }
+
 .footer-social-icon_01 {
   background: url("../img/footer/social-icon/footer-social-icon_facebook.svg") center no-repeat;
   width: 20px;
